# p

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  BUILD  Earthfile  Makefile  backend.tf  cdk.tf.json  cdktf.json  main.py  main.tf.json  package-lock.json  package.json  pants.toml  pyproject.toml  pyproject.yoml  requirements.txt
.github/workflows/: main.yml
amanibhavam/: __init__.py  aws.py  fogg.py  pyproject.toml
amanibhavam/cdk/aws/: __init__.py
amanibhavam/cdk/aws/_jsii/: __init__.py
amanibhavam/cdk/aws/accessanalyzer/: __init__.py
amanibhavam/cdk/aws/acm/: __init__.py
amanibhavam/cdk/aws/amplify/: __init__.py
amanibhavam/cdk/aws/apigateway/: __init__.py
amanibhavam/cdk/aws/apigatewayv2/: __init__.py
amanibhavam/cdk/aws/appautoscaling/: __init__.py
amanibhavam/cdk/aws/appconfig/: __init__.py
amanibhavam/cdk/aws/appmesh/: __init__.py
amanibhavam/cdk/aws/apprunner/: __init__.py
amanibhavam/cdk/aws/appstream/: __init__.py
cdktf.out/: manifest.json
cdktf.out/stacks/default/: cdk.tf.json
cdktf.out/stacks/demo/: .terraform.lock.hcl  cdk.tf.json
cdktf.out/stacks/do/: cdk.tf.json
cdktf.out/stacks/null/: cdk.tf.json
defn/: Earthfile  Makefile  cdktf.json  main.py  pyproject.toml
defn/cdktf.out/: manifest.json
defn/stacks/example/: cdk.tf.json
defn/stacks/katt/: cdk.tf.json
defn/stacks/kitt/: cdk.tf.json
defn_p/: __init__.py
fogg/: aws.py
foo/: demo.py  init.py  main.py  null.py  textual.py
lib/: Earthfile
meh/: aws.py  null.py
src/: Makefile  cdktf.json  main.tf.json
src/fogg/: aws.py
(+124 files in other folders)
