[tool.poetry]
name = "defn_p"
version = "0.0.1"
description = ""
authors = ["Amanibhavam <iam@defn.sh>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
cdktf = "^0.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cdktf = "defn_p:main"
