[tool.poetry]
name = "foo"
description = ""
authors = []
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.8"
amanibhavam = "^0.1.17"
typer = "^0.4.1"
textual = "^0.1.18"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
